ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.6, 7.0.18, 6.0.24
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • Fully Compatible
    • ALL
    • v8.0, v7.0, v6.0, v5.0
    • QO 2025-02-17
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The invariant on a matching uid in the lsid of the opCtx and command request in sharding_task_executor.cpp has led to several AFs involving server crashes. While this is a sign of unintended behavior, it is not so serious that it should be crashing the server. We should log this as a programmer error instead.

            Assignee:
            Lynne Wang
            Reporter:
            Lynne Wang
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: