SERVER-100901 Relax user digest invariant to tassert in ShardingTaskExecutor (#32452)

GitOrigin-RevId: 61f1d378cb73ec945c37bf33be438fbfbb6c61a7